ESC키로 코드 선택기 닫기 기능 추가 (#9)

--- a/src/main/resources/templates/chordEdit.html
+++ b/src/main/resources/templates/chordEdit.html
@@ -70,7 +70,7 @@
 
             <!--가사 입력 칸-->
             <textarea id="content" class="textarea textarea-bordered w-full h-[400px] text-center"
-                      placeholder="줄바꿈 : Shift + Enter / 업로드 : Enter"
+                      placeholder="줄바꿈 : Shift + Enter / 업로드 : Enter / 코드 선택기 닫기 : ESC"
                       onkeydown="handleEnter(event)"
             ></textarea>
 
