--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -55,6 +55,7 @@
                     <div class="ml-5">1. 입력칸에 가사를 <span class="font-bold">직접 입력</span>하거나 <span class="font-bold">붙여넣기</span>하여 가사를 업로드하세요.</div>
                     <div class="text-gray-500 ml-8"><span class="font-bold">- Shift + Enter : </span>가사 줄바꿈</div>
                     <div class="text-gray-500 ml-8"><span class="font-bold">- Enter : </span>가사 업로드</div>
+                    <div class="text-gray-500 ml-8"><span class="font-bold">- ESC : </span>코드 선택기 닫기</div>
                     <div class="ml-5">2. 가사의 각 <span class="font-bold">음절</span>을 클릭하여 <span class="font-bold">기타 코드</span>를 지정할 수 있습니다. (공백에도 코드 지정 가능)</div>
                     <div class="ml-5">3. 악보 작성을 마쳤다면, <span class="font-bold">악보 등록 버튼</span>을 눌러 당신의 악보를 <span class="font-bold">Frety</span>에 공유하세요!</div>
                 </div>
@@ -70,7 +71,7 @@
 
             <!--가사 입력 칸-->
             <textarea id="content" th:field="*{content}" class="textarea textarea-bordered w-full h-[400px] text-center"
-                      placeholder="줄바꿈 : Shift + Enter / 업로드 : Enter"
+                      placeholder="줄바꿈 : Shift + Enter / 업로드 : Enter / 코드 선택기 닫기 : ESC"
                       onkeydown="handleEnter(event)"
             ></textarea>
 
