--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,7 +6,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="robots" content="index, follow">
-        <link rel="icon" href="https://www.frety.me/favicon.ico" type="image/x-icon"/>
+
+        <link th:href="@{/favicon.ico}" rel="icon" type="image/x-icon">
+        <link th:href="@{/favicon.ico}" rel="icon" sizes="32x32" type="image/png">
+        <link th:href="@{/favicon.ico}" rel="icon" sizes="16x16" type="image/png">
+        <link th:href="@{/favicon.ico}" rel="apple-touch-icon" sizes="180x180">
+        <link th:href="@{/favicon.ico}" rel="icon" sizes="192x192" type="image/png">
+        <link th:href="@{/favicon.ico}" rel="icon" sizes="512x512" type="image/png">
 
         <!-- daisy UI CDN / tailwind CSS CDN-->
         <script src="https://cdn.tailwindcss.com"></script>
