--- a/src/main/resources/templates/chordEdit.html
+++ b/src/main/resources/templates/chordEdit.html
@@ -2,8 +2,8 @@
 <html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <title th:text="${title}"></title>
-    <meta th:attr="content=${title}" name="title">
-    <meta th:attr="content=${description}" name="description">
+    <meta name="title" th:content="${title + ' Frety(프렛티)'}" />
+    <meta name="description" th:content="${description}" />
 </head>
 
 <body>
