--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -2,8 +2,8 @@
 <html layout:decorate="~{layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head>
     <title>Frety</title>
-    <meta name="title" content="Frety - 프렛티">
-    <meta name="description" content="프렛위에서 완성되는 당신의 기타 코드">
+    <meta name="title" content="Frety - 프렛티" />
+    <meta name="description" content="프렛위에서 완성되는 당신의 기타 코드" />
 
     <meta property="og:title" content="Frety - 프렛티"/>
     <meta property="og:description" content="프렛위에서 완성되는 당신의 기타 코드"/>
@@ -15,6 +15,11 @@
     <meta property="og:image:width" content="400"/>
     <meta property="og:image:height" content="200"/>
     <meta property="og:image:alt" content="frety_main_image"/>
+
+    <meta name="twitter:card" content="frety_main_image" />
+    <meta name="twitter:title" content="Frety - 프렛티" />
+    <meta name="twitter:description" content="프렛위에서 완성되는 당신의 기타 코드" />
+    <meta name="twitter:image" content="https://www.frety.me/guitar.png" />
 
     <link rel="canonical" href="https://www.frety.me"/>
     <link rel="alternate" href="https://www.frety.me" hrefLang="ko_KR"/>
@@ -28,11 +33,11 @@
             "description": "프렛위에서 완성되는 당신의 기타 코드",
             "url": "https://www.frety.me",
             "image": {
-                "@type": "websiteImage",
+                "@type": "ImageObject",
                 "url": "https://www.frety.me/guitar.png",
                 "width": 400,
                 "height": 200,
-                "alt": "frety_main_image"
+                "caption": "frety_main_image"
             }
         }
     </script>
