악보 제작 가사 한 행 앞 뒤 공백 10개씩 추가하여 코드지정가능하게 변경

--- a/src/main/resources/templates/chordCreate.html
+++ b/src/main/resources/templates/chordCreate.html
@@ -110,6 +110,9 @@
 
     <!--한 행 삭제-->
     <script src="/script/removeLine.js"></script>
+
+    <!--캡션달기-->
+<!--    <script src="/script/addCaption.js"></script>-->
 </div>
 </body>
 </html>
